--- a/templates/index.html
+++ b/templates/index.html
@@ -9,58 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Minimap Tactics</title>
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-
-    <script text="javascript" src="https://webtiming.github.io/timingsrc/lib/timingsrc-v2.js"></script>
-    <script text="javascript" src="https://mcorp.no/lib/mediasync.js"></script>
-
-
-    <!-- <script text="javascript" src="https://webtiming.github.io/timingsrc/doc/js/exp_mediasync.js"></script> -->
-
-    <!-- <script>
-        var run = function (timingProvider) {
-
-            // timing object
-            var to = new TIMINGSRC.TimingObject({ provider: timingProvider, range: [0, 100] });
-
-            // set up button click handlers
-            var buttonsElem = document.getElementById("buttons");
-            var self = this;
-            buttonsElem.onclick = function (e) {
-                var elem, evt = e ? e : event;
-                if (evt.srcElement) elem = evt.srcElement;
-                else if (evt.target) elem = evt.target;
-                if (elem.id === "pause") {
-                    to.update({ velocity: 0.0 });
-                }
-                else if (elem.id === "tostart") {
-                    to.update({ position: 0.0 });
-                }
-                else if (elem.id === "skipforward") {
-                    to.update({ position: to.query().position + 5 });
-                }
-                else if (elem.id === "skipbackward") {
-                    to.update({ position: to.query().position - 5 });
-                }
-                else if (elem.id === "forward") {
-                    var v = to.query();
-                    if (v.position === 100 && v.velocity === 0) {
-                        to.update({ position: 0.0, velocity: 1.0 });
-                    } else to.update({ velocity: 1.0 });
-                }
-                else if (elem.id === "toend") {
-                    to.update({ position: 100.0 });
-                }
-            }
-
-            // set up refresh of timingobject position
-            to.on("timeupdate", function () {
-                document.getElementById("position").innerHTML = to.query().position.toFixed(2);
-            });
-
-            // set up video sync
-            var sync1 = MCorp.mediaSync(document.getElementById('video'), to);
-        };
-    </script> -->
     <style>
         body {
             background-color: #102031;
@@ -88,6 +36,13 @@
             position: absolute !important;
             z-index: 10 !important;
         }
+
+        #toast-popup {
+            width: 100%;
+            margin: 1.5em;
+            position: absolute;
+            z-index: 9999;
+        }
     </style>
 </head>
 
@@ -105,7 +60,7 @@
                                 <div class="form-group">
                                     <label for="lineColorPicker" class="form-label h6">Color picker</label>
                                     <input type="color" class="form-control form-control-color" id="lineColorPicker"
-                                        value="#ffffff" style="height: 40px !important; width: 100% !important" />
+                                        value="#ff0000" style="height: 40px !important; width: 100% !important" />
                                 </div>
                             </div>
                             <div class="col">
@@ -182,7 +137,6 @@
         <canvas id="canvas"></canvas>
         <video id="minimap-video" src="{{video_url}}" width="800" height="850" muted preload></video>
     </div>
-    <script type="text/javascript" src="https://www.mcorp.no/lib/mcorp-2.0.js"></script>
     <script type="text/javascript" src="/static/utils.js"></script>
     <script type="text/javascript" src="/static/jquery.min.js"></script>
     <script type="text/javascript" src="/static/socket.io.min.js"></script>
@@ -192,63 +146,14 @@
     <script type='text/javascript'>
         const socket = io();
         const clients = new Map();
-        // const video = document.getElementById("minimap-video");
-
         const tool = new paper.Tool();
         const strokeWidth = 3;
         const dash = [10, 10];
         const ghostOpacity = 0.5;
-
-
-        var APPID_MCORP = "6651674759315626087";
-        var app = MCorp.app(APPID_MCORP, { anon: true });
-        app.run = function () {
-            var to = new TIMINGSRC.TimingObject({ provider: app.motions.shared, range: [0, 100] });
-            paper.view.onKeyUp = (event) => {
-                switch (event.key) {
-                    case "o":
-                        $('#settingControlsModal').modal('toggle');
-                        break;
-                    case "p":
-                        var v = to.query();
-                        if (v.velocity === 1.0) {
-                            to.update({ velocity: 0.0 });
-                        } else {
-                            to.update({ velocity: 1.0 });
-                        }
-                        break;
-                    case "l":
-                        var v = to.query();
-                        if (v.position === 100 && v.velocity === 0) {
-                            to.update({ position: 0.0, velocity: 1.0 });
-                        } else to.update({ velocity: 1.0 });
-                        break;
-                    case "s":
-                        to.update({ velocity: 0.0 });
-                        to.update({ position: 0.0 });
-                        break;
-                    case "f":
-                        to.update({ position: to.query().position + 1 });
-                        break;
-                    case "b":
-                        to.update({ position: to.query().position - 1 });
-                        break;
-                }
-            }
-            var sync1 = MCorp.mediaSync(document.getElementById('minimap-video'), to);
-        };
-        app.init();
+        const video = document.getElementById("minimap-video");
 
         paper.setup(document.getElementById("canvas"));
-        tool.minDistance = 15;
-
-        // function videoEventHandler(event) {
-        //     socket.emit("event_video", { type: event.type, time: event.target.currentTime })
-        // }
-
-        // video.addEventListener("play", videoEventHandler);
-        // video.addEventListener("pause", videoEventHandler);
-        // video.addEventListener("seeked", videoEventHandler);
+        tool.minDistance = 20;
 
         function getClientSettings(event) {
             let color = $("#lineColorPicker").val();
@@ -271,6 +176,9 @@
         tool.onMouseDown = toolMouseEventHandler;
         tool.onMouseUp = toolMouseEventHandler;
         tool.onMouseDrag = toolMouseEventHandler;
+        paper.view.onDoubleClick = function (event) {
+            socket.emit("mouse_dblclk", getClientSettings(event))
+        }
 
         socket.on("connect", () => {
             console.log("connected!");
@@ -289,44 +197,6 @@
                 clients.delete(msg);
 
             }
-        })
-
-        // socket.on("ev", (msg) => {
-        //     console.log("I was called.");
-
-        //     let isVideoPlaying = video.currentTime > 0 && !video.paused && !video.ended
-        //         && video.readyState > video.HAVE_CURRENT_DATA;
-
-        //     switch (msg.type) {
-        //         case "play":
-        //             if (!isVideoPlaying) {
-        //                 video.play().catch(() => { });
-        //             }
-        //             break;
-        //         case "pause":
-        //             if (isVideoPlaying) {
-        //                 video.currentTime = msg.time;
-        //                 video.pause();
-        //             }
-        //             break;
-        //         case "seeked":
-        //             video.pause();
-        //             video.currentTime = msg.time;
-        //             break;
-        //     }
-        // })
-
-        socket.on("mouse_dblclk", (msg) => {
-            let client_data = clients.get(msg.client_id);
-
-            if (client_data.circle) {
-                client_data.circle.remove();
-            }
-
-            client_data.circle = new paper.Shape.Circle(new paper.Point(msg.x, msg.y), 50);
-            client_data.circle.strokeColor = msg.color;
-            client_data.circle.strokeWidth = strokeWidth;
-            client_data.circle.tween({ radius: 50 }, { radius: 0 }, 250);
         })
 
         socket.on("event_mouse", (msg) => {
@@ -399,26 +269,22 @@
             }
         })
 
-        socket.on("key_up", (msg) => {
+        socket.on("clear", (msg) => {
             let client_id = msg.client_id;
             let client_data = clients.get(client_id);
 
-            switch (msg.key) {
-                case 'c':
-                    if (client_data) {
-                        if (client_data.paths) {
-                            $.each(client_data.paths, (_, p) => {
-                                p.remove();
-                            })
-                        }
+            if (client_data) {
+                if (client_data.paths) {
+                    $.each(client_data.paths, (_, p) => {
+                        p.remove();
+                    })
+                }
 
-                        if (client_data.shapes) {
-                            $.each(client_data.shapes, (_, p) => {
-                                p.remove();
-                            })
-                        }
-                    }
-                    break;
+                if (client_data.shapes) {
+                    $.each(client_data.shapes, (_, p) => {
+                        p.remove();
+                    })
+                }
             }
         })
 
@@ -452,37 +318,56 @@
             }
         }
 
-        // paper.view.onKeyUp = (event) => {
-        //     socket.emit('key_up', { key: event.key })
+        socket.on("play", (msg) => {
+            video.play().catch((err) => {});
+        })
 
-        //     switch (event.key) {
-        //         case "o":
-        //             $('#settingControlsModal').modal('toggle');
-        //             break;
-        //         case "p":
-        //             let isVideoPlaying = video.currentTime > 0 && !video.paused && !video.ended
-        //                 && video.readyState > video.HAVE_CURRENT_DATA;
+        socket.on("pause", (msg) => {
+            video.pause();
+            video.currentTime = time;
+        })
 
-        //             if (!isVideoPlaying) {
-        //                 video.play().catch((reason) => { console.log(reason) });
-        //             } else {
-        //                 video.pause();
-        //             }
-        //             break;
-        //         case "s":
-        //             video.pause();
-        //             video.currentTime = 0;
-        //             break;
-        //         case "f":
-        //             video.pause();
-        //             video.currentTime += 1;
-        //             break;
-        //         case "b":
-        //             video.pause();
-        //             video.currentTime -= 1;
-        //             break;
-        //     }
-        // }
+        socket.on("seek", (msg) => {
+            video.pause();
+            if (msg.type === "f") {
+                video.currentTime += 1;
+            } else {
+                video.currentTime -= 1;
+            }
+        })
+
+        socket.on("stop", (msg) => {
+            video.pause();
+            video.currentTime = 0;
+        })
+
+        paper.view.onKeyUp = (event) => {
+            switch (event.key) {
+                case "o":
+                    $('#settingControlsModal').modal('toggle');
+                    break;
+                case "p":
+                    let playing = video.currentTime > 0 && !video.paused && !video.ended
+                        && video.readyState > video.HAVE_CURRENT_DATA;
+                    if (!playing) {
+                        socket.emit("play");
+                    } else {
+                        socket.emit("pause", video.currentTime);
+                    }
+                    break;
+                case "s":
+                    socket.emit("stop", video.currentTime);
+                    break;
+                case "f":
+                    socket.emit("seek", { type: "f", time: video.currentTime });
+                    break;
+                case "b":
+                    socket.emit("seek", { type: "b", time: video.currentTime });
+                    break;
+                case "c":
+                    socket.emit("clear");
+            }
+        }
     </script>
 </body>
 
