--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,9 @@
     <meta name="author" content="notyourfather">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:url" content="/" />
-    <meta property="og:type" content="video.other" />
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="Minimap Tactics" />
     <meta property="og:description" content="A minimap tactics site for room ({{room}})" />
-    <meta property="og:video" content="{{video_url}}" />
-    <meta property="og:video:type" content="video/mp4" />
-    <meta property="og:video:width" content="800" />
-    <meta property="og:video:height" content="850" />
     <title>Minimap Tactics</title>
     <link rel="stylesheet" href="/static/bootstrap.min.css">
     <style>
